--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
-        run: npm ci
-      - run: npm install --force
+        run: npm install --force
+      - run: npm ci
       - run: npm run build --if-present
       - run: npm test
 
